# shibboleth

./: Cargo.toml  README.md  WikiVocab25k.txt
src/: lib.rs  main.rs
