[package]
name = "shibboleth"
license = "Apache-2.0"
version = "0.1.1"
authors = ["Fabio Mencoboni <Fabio.Mencoboni@gmail.com>"]
edition = "2018"
description = "Pure-Rust implementation of word2vec embeddings"
readme = "README.md"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sqlite = "0.25.0"
rand = "0.7.3"
zoea = "0.0.8"
